--- a/about.css
+++ b/about.css
@@ -5,6 +5,7 @@
     border-radius: 18px;
     box-shadow: 0 8px 36px 0 rgba(100, 50, 10, 0.09);
     padding: 46px 22px 40px 22px;
+    margin-top: 100px;
 }
 
 h1 {
@@ -20,7 +21,10 @@ h1 {
     font-size: 1.17rem;
     line-height: 1.7;
     margin-bottom: 34px;
-    text-align: center;
+    margin-top: 70px;
+    font-weight: 500;
+    max-width: 1000px;
+    text-align: left;
     color: #000000;
 }
 
@@ -85,7 +89,7 @@ h1 {
 @media (max-width: 800px) {
     .container {
         padding: 16px 4vw;
-        margin-top: 110px; /* Еще больший отступ для мобильных */
+        margin-top: 110px; 
     }
 
     .info-blocks {
@@ -102,9 +106,8 @@ h1 {
     }
 }
 
-/* Для десктопа тоже добавим безопасный отступ сверху */
 @media (min-width: 801px) {
     .container {
-        margin-top: 90px; /* Оставляем безопасный отступ для десктопа */
+        margin-top: 150px; 
     }
 }
